#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pdscalibdata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-05-19
2014-06-30 Mikhail S. Dubrovin
- NDArrIOV1 - add constructor to load ndarray from file with metadata, w/o default initialization
- test/ex_ndarrio.cpp - add test for new constructor 
- test/test.data TYPE -> DTYPE
	
Tag: V00-05-18
2014-06-13 Mikhail S. Dubrovin
- in SConscript add DOCGEN="doxy-all psana-modules-doxy"
	
Tag: V00-05-17
2014-05-23 Mikhail S. Dubrovin
- add AndorBaseV1.h, Opal1000BaseV1.h, Opal4000BaseV1.h
- bring to common structure CsPadBaseV2.h, CsPad2x2BaseV2.h, PnccdBaseV1.h
- in NDArrIOV1.cpp do not throw exceptions for 1-d arrays 
	in case of variable data length for example for common_mode.
	
Tag: V00-05-16
2014-05-21 Mikhail S. Dubrovin
- in NDArrIOV1 add options for initialization of dedault constants
- add include/PrincetonBaseV1.h
	
Tag: V00-05-15
2014-05-16 Mikhail S. Dubrovin
- NDArrIOV1 - add "#include <cstring>" for RHEL6

Tag: V00-05-14
2014-05-15 Mikhail S. Dubrovin
- NDArrIOV1 - is updated for backward compatability with old format of calib files
- in test/ex_ndarrio.cpp - add more tests

Tag: V00-05-13
2014-05-06 Mikhail S. Dubrovin
- in GlobalMethods.h - get rid of uint for RHEL6

Tag: V00-05-12
2014-05-06 Mikhail S. Dubrovin
- in SvnProps.py (to get rid of nightly complains) move global class attributes under __init__
- add NDArrIOV1 - to save in file / load from file ndarray with metadata and comments
- add test/ex_ndarrio.cpp, test.data - for test NDArrIOV1
- in  GlobalMethods add strTimeStamp(format) and strEnvVar(envVar) methods
	
Tag: V00-05-11
2014-04-29 Mikhail Dubrovin
- GlobalMethods.h - fix doxy documentation

Tag: V00-05-10