@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-20
+2014-07-03 Mikhail S. Dubrovin
+- add VarShapeCameraBaseV1.h - for calibration of variable size arrays
+	
 Tag: V00-05-19
 2014-06-30 Mikhail S. Dubrovin
 - NDArrIOV1 - add constructor to load ndarray from file with metadata, w/o default initialization
